Put behind feature toggle, some fixes
postcss does all each time anyway, we can unset allCssVars

* which solves the issue of deleted variables lingering.

clean up rebase booboo

Nicer file name

Load theme editor when feature is on

Remove "npm" and "i" package, fix lock file

add style version

Clean up

--- a/assets/src/styles/components/VarPicker.scss
+++ b/assets/src/styles/components/VarPicker.scss
@@ -1,6 +1,3 @@
-.var-picker {
-}
-
 .var-picker * {
   font-family: Roboto, sans-serif !important;
   color: black !important;
@@ -12,7 +9,6 @@
   max-height: 80vh;
   width: 300px;
   overflow-y: scroll;
-  resize: 'horizontal';
   margin-bottom: 0;
 
   &::-webkit-scrollbar {
@@ -46,7 +42,6 @@
 }
 
 .var-picker .var-group {
-  //max-height: 400px;
   background: white !important;
   border: 1px solid black !important;
   margin-bottom: 3px !important;
@@ -63,7 +58,6 @@
 }
 
 .var-picker .var-control {
-  //max-height: 400px;
   clear: both;
   background: white !important;
   border: 1px solid black !important;
